# DDC-AIAgents

./: .gitignore  README.md  main.py  pyproject.toml
agents/: __init__.py  base_agent.py  body_agent.py  conclusion_agent.py  content_research_agent.py  image_agent.py  intro_agent.py  keyword_agent.py  orchestrator.py  review_agent.py  seo_agent.py  sources_agent.py  title_agent.py  writing_agent.py
core/: agent_factory.py  agent_prompt_builder.py  logger.py  orchestrator.py
examples/: a2a_demo.py
outputs/: the_future_of_multi_agent_ai_systems_20250530_170501.md  the_future_of_multi_agent_ai_systems_20250530_171146.md  the_future_of_multi_agent_ai_systems_20250530_173815.md
protocols/: __init__.py  a2a_schemas.py
tests/: conftest.py  test_agent_base.py  test_agent_factory.py  test_agent_prompt_builder.py  test_keyword_agent.py
tests/agents/: test_base_agent.py  test_content_research_agent.py  test_image_agent.py  test_seo_agent.py  test_writing_agent.py
tests/core/: test_agent_factory.py  test_agent_prompt_builder.py
utils/: __init__.py  json_utils.py
